[package]
name = "oxideav-mp2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust MPEG-1 Audio Layer II (MP2) decoder"

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }
